# elixirchip_saving

projects/eval_ether/: .gitignore  README.md
projects/eval_ether/eval_ether_bridge/rtl/: ether_if.sv
projects/eval_ether/eval_ether_loopback/rtl/: ether_if.sv  rgmii_if.sv
projects/eval_ether/eval_ether_spu/: README.md
projects/eval_ether/eval_ether_spu/rtl/: stream_processing_unit.sv
projects/eval_sram_to_sram/eval_add512_u8/: README.md
projects/eval_sram_to_sram/eval_add512_u8/rtl/: eval_sram_to_sram_add_main.sv  sram_to_sram_add.sv  sram_to_sram_add_core.sv
projects/eval_sram_to_sram/eval_any512_s8/rtl/: eval_sram_to_sram_any_main.sv  sram_to_sram_any.sv  sram_to_sram_any_core.sv
projects/eval_sram_to_sram/eval_array512_s8/rtl/: eval_sram_to_sram_array_main.sv  sram_to_sram_array.sv  sram_to_sram_array_core.sv  sram_to_sram_calc_unit.sv  sram_to_sram_calc_unit_add.sv  sram_to_sram_calc_unit_mul.sv  sram_to_sram_calc_unit_test.sv  sram_to_sram_read.sv  sram_to_sram_write.sv
projects/eval_sram_to_sram/eval_elixir_stage1/: README.md
projects/eval_sram_to_sram/eval_elixir_stage1/elixir/: spu1.exs
projects/eval_sram_to_sram/eval_elixir_stage1/rtl/: sram_to_sram_spu_core.sv
projects/eval_sram_to_sram/eval_elixir_stage2/: README.md
projects/eval_sram_to_sram/eval_elixir_stage2/constrain/: clk_kv260.xdc
projects/eval_sram_to_sram/eval_elixir_stage2/rtl/: eval_sram_to_sram_spu_main.sv  spu_add.sv  spu_add_cfg.sv  spu_data.sv  spu_logic_cfg.sv  spu_mul.sv  spu_nop.sv  spu_sub.sv  spu_valid.sv  sram_to_sram_write.sv  stream_processing_unit.sv
projects/eval_sram_to_sram/eval_mul512_u8/rtl/: eval_sram_to_sram_mul_main.sv  sram_to_sram_mul.sv  sram_to_sram_mul_core.sv
projects/eval_sram_to_sram/eval_spu64/: README.md
projects/eval_sram_to_sram/eval_spu64/rtl/: spu_calc_element.sv  sram_to_sram_read.sv  sram_to_sram_spu_core.sv  stream_processing_unit.sv
projects/eval_sram_to_sram/eval_spu_es1/: README.md
projects/eval_sram_to_sram/eval_spu_es1/rtl/: eval_sram_to_sram_spu_main.sv  mul_s8s8s8.sv  sram_to_sram_spu.sv  sram_to_sram_spu_core.sv  stream_processing_unit.sv
projects/fpga_op_synth_eval/kv260/: README.md
projects/fpga_op_synth_eval/zybo_z7/: .gitignore
projects/spu_op_es1/elixir_nifs/: Dockerfile  README.md  docker-compose.yml  run.sh
projects/spu_op_es1/elixir_nifs/gx/: README.md  mix.exs
projects/spu_op_es1/elixir_nifs/gx_sample/: .gitignore  Makefile  README.md  mix.exs
projects/spu_op_es1/elixir_nifs/sv_parser/: .gitignore  README.md  mix.exs
projects/spu_op_es1/elixir_nifs/verilatorx/: .gitignore  Makefile  README.md  mix.exs
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/: CMakeLists.txt
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/hello/: CMakeLists.txt  hello_nif.cpp
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/lists/: CMakeLists.txt
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/lists/nif/: CMakeLists.txt
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/spu/: CMakeLists.txt  elixirchip_es1_spu_op_acc.cpp  elixirchip_es1_spu_op_acc.h
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/spu/acc/: CMakeLists.txt  elixirchip_es1_spu_op_acc.cpp  elixirchip_es1_spu_op_acc.h  wrapper.cpp  wrapper.h  wrapper.sv
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/spu_nif/: CMakeLists.txt  wrapper_call.cpp
projects/spu_op_es1/elixir_nifs/verilatorx/cmake/spu_nif/acc/: CMakeLists.txt  call.cpp
projects/spu_op_es1/eval_synth/rtl/: elixirchip_es1_spu_op_add_warapper.sv  elixirchip_es1_spu_op_lut_wrapper.sv  elixirchip_es1_spu_op_mem_sp_warapper.sv  elixirchip_es1_spu_op_mem_warapper.sv  ram_dualport_ramb18e2.sv  sample_add.sv  spu_es1_op_synth.sv
projects/spu_op_es1/rtl/: elixirchip_es1_spu_ctl_valid.sv  elixirchip_es1_spu_ctl_valid_en.sv  elixirchip_es1_spu_data_delay.sv  elixirchip_es1_spu_op_acc.sv  elixirchip_es1_spu_op_add.sv  elixirchip_es1_spu_op_all.sv  elixirchip_es1_spu_op_and.sv  elixirchip_es1_spu_op_any.sv  elixirchip_es1_spu_op_lut.sv  elixirchip_es1_spu_op_mac.sv  elixirchip_es1_spu_op_match.sv  elixirchip_es1_spu_op_mem.sv  elixirchip_es1_spu_op_mem_sp.sv  elixirchip_es1_spu_op_mul.sv  elixirchip_es1_spu_op_mulsu.sv  elixirchip_es1_spu_op_mulu.sv  elixirchip_es1_spu_op_nand.sv  elixirchip_es1_spu_op_nop.sv  elixirchip_es1_spu_op_nor.sv  elixirchip_es1_spu_op_not.sv  elixirchip_es1_spu_op_or.sv  elixirchip_es1_spu_op_reg.sv  elixirchip_es1_spu_op_sel.sv  elixirchip_es1_spu_op_sel_lt.sv  elixirchip_es1_spu_op_simd_acc.sv  elixirchip_es1_spu_op_simd_add.sv  elixirchip_es1_spu_op_sll.sv  elixirchip_es1_spu_op_sra.sv  elixirchip_es1_spu_op_srl.sv  elixirchip_es1_spu_op_sub.sv  elixirchip_es1_spu_op_xnor.sv  elixirchip_es1_spu_op_xor.sv  elixirchip_es1_xilinx_carry8.sv  elixirchip_es1_xilinx_flipflops.sv  elixirchip_es1_xilinx_ramb18e2.sv
projects/spu_op_es1/testbench/: clean_all.sh  expected_delay.sv  run_all.sh
projects/spu_op_es1/testbench/tb_elixirchip_es1_spu_ctl_valid/: tb_main.sv  (+2 more)
projects/spu_op_es1/testbench/tb_elixirchip_es1_spu_op_lut/verilator_cpp/: CMakeLists.txt
projects/spu_op_es1/wrapper/: README.md
projects/spu_op_es1/wrapper/elixirchip_es1_spu_op_add/: CMakeLists.txt  Makefile  elixirchip_es1_spu_op_add.cpp  elixirchip_es1_spu_op_add.h  elixirchip_es1_spu_op_add_wrapper.sv  example.cpp  run.sh
(+401 files in other folders)
